# my_ffi_package

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/my_ffi_package/: MyFfiPackagePlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/my_ffi_package_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: my_ffi_package.podspec
ios/Classes/: MyFfiPackagePlugin.h  MyFfiPackagePlugin.m  SwiftMyFfiPackagePlugin.swift
ios/native_code/: native.cpp
lib/: my_ffi_package.dart  my_ffi_package_method_channel.dart  my_ffi_package_platform_interface.dart  native.dart
test/: my_ffi_package_method_channel_test.dart  my_ffi_package_test.dart
